--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!--Colores contador-->
+    <color name="azul">#03A9F4</color>
+    <color name="naranja">#FF5722</color>
+    <color name="verde">#4CAF50</color>
+
+
 </resources>
